# qtsparkle

./: CMakeLists.txt
src/: CMakeLists.txt  diskimageunarchiver.cpp  diskimageunarchiver.h  downloader.cpp  downloader.h  followredirects.cpp  followredirects.h  translations.ts  uicontroller.cpp  uicontroller.h  unarchiver.cpp  unarchiver.h  updatechecker.cpp  updatedialog.cpp
